Update and rename Facebook to Facebook.html

--- a/Facebook.html
+++ b/Facebook.html
@@ -297,7 +297,7 @@
 		{
 			text-decoration: underline;
 		}
-		#footer {clear: both; margin-top: 40px;font-size: 11px; margin-bottom: 20px;}
+		#footer {clear: both; margin-top: 40px;font-size: 11px; margin-bottom: 20px; color: #737373;}
 		li
 		{
 			list-style-type: none;
@@ -501,14 +501,14 @@
 							<td><a href="#">Cookies</a></td>
 							<td><a href="#">AdChoices</a></td>
 							<td><a href="#">Terms</a></td>
-							<td><a href="#">Account security</a></td>
-							<td><a href="#">Login</a></td>
-							<td><a href="#">Login help</a></td>
-							<td><a href="#">Help </a></td>
-
-							
-							
+							<td><a href="#">Account security</a></td>							
 						</tr>
+					</tbody>
+				</table>
+				<table class="foter">
+					<tbody>
+						<td><a href="#">Login help</a></td>
+							<td><a href="#">Help </a></td>
 					</tbody>
 				</table>
 				<div id="footer">
